Prevent Quick Filter cells from wrapping around to the next line.

--- a/src/doby-grid.less
+++ b/src/doby-grid.less
@@ -222,6 +222,7 @@
 .doby-grid-header-filter {
 	height: 30px;
 	overflow: hidden;
+	white-space: nowrap
 }
 
 	.doby-grid-header-filter-cell {
